infrastructure/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dart-backend
spec:
  selector:
    matchLabels:
      app: dart-backend
  template:
    metadata:
      labels:
        app: dart-backend
    spec:
      hostNetwork: false
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: dart-backend
          image: ghcr.io/it-for-us/dart-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dart-backend
spec:
  selector:
    app: dart-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
