infrastructure/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dart-frontend
spec:
  selector:
    matchLabels:
      app: dart-frontend
  template:
    metadata:
      labels:
        app: dart-frontend
    spec:
      hostNetwork: false
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: dart-frontend
          image: ghcr.io/it-for-us/dart-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dart-frontend
spec:
  selector:
    app: dart-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
