infrastructure/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dart-postgres
spec:
  selector:
    matchLabels:
      app: dart-postgres
  template:
    metadata:
      labels:
        app: dart-postgres
    spec:
      containers:
        - name: dart-postgres
          image: postgres:15-alpine
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: mount-dart-postgres
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: mount-dart-postgres
          persistentVolumeClaim:
            claimName: dart-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: dart-postgres
spec:
  selector:
    app: dart-postgres
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
