infrastructure/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dart-ingress
spec:
  rules:
    - host: dart-prod.fria.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dart-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dart-backend
                port:
                  number: 80
